--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TWCUBE網站 - 比賽與聯絡資訊</title>
+  <title>TWCUBE網站</title>
   <style>
     :root{
       --bg: #f8fafc; --card:#ffffff; --text:#0b1220; --accent:#06b6d4; --muted:#475569; --glass:rgba(11,17,32,0.03);
