--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="zh-Hant">
 <head>
+  <link rel="icon" type="image/png" href="favicon.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TWCUBE網站</title>
@@ -670,11 +671,6 @@ clearBtn.addEventListener('click',async ()=>{
 // ----------------------------------------------------------------
 // --- 初始化與主題切換 ---
 // ----------------------------------------------------------------
-
-sunBtn.addEventListener('click',()=>{document.documentElement.classList.remove('dark'); localStorage.setItem('wca_theme','light');});
-moonBtn.addEventListener('click',()=>{document.documentElement.classList.add('dark'); localStorage.setItem('wca_theme','dark');});
-if(localStorage.getItem('wca_theme')==='dark') document.documentElement.classList.add('dark');
-else document.documentElement.classList.remove('dark');
 
 (async()=>{
   // 1. 載入比賽資料
