--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TWCUBE網站 - 比賽與聯絡資訊</title>
+  <title>TWCUBE網站</title>
   <style>
     :root{
       --bg: #f8fafc; --card:#ffffff; --text:#0b1220; --accent:#06b6d4; --muted:#475569; --glass:rgba(11,17,32,0.03);
@@ -263,7 +263,7 @@
     <div style="display:flex;justify-content:space-between;align-items:center;gap:12px">
       <div>
         <h1>TWCUBE網站</h1>
-        <p class="lead">WCA 台灣比賽與個人聯絡資源 🇹🇼</p>
+        <p class="lead">WCA 台灣比賽 🇹🇼</p>
       </div>
       <div class="toolbar">
         <div title="白素主題（太陽）" id="sunBtn" class="icon-btn">☀️</div>
